crates/vihaco/tests/compile_fail/composite_machine/duplicate-header.rs
#[derive(Default)]
struct Header;

#[vihaco::composite]
struct BadMachine {
    #[header]
    first: Header,

    #[header]
    second: Header,
}

fn main() {}
